# ansible-playbook-for-wordpress

./: README.md  Vagrantfile  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
inventories/aws/: hosts.yml
inventories/aws/group_vars/all/: main.yml
inventories/vagrant/: hosts.yml
inventories/vagrant/group_vars/all/: main.yml
